<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_model">Software Model</string>
    <string name="about_name">Software Name</string>
    <string name="about_name_value">Continuous Glucose Monitoring Mobile Application</string>
    <string name="about_privatePolicy">Privacy Policy</string>
    <string name="about_releaseVersion">Release Version Number</string>
    <string name="about_servicePolicy">Terms of Service</string>
    <string name="about_version">Software Version Number</string>
    <string name="about_versionCheck">Detection Version</string>
    <string name="about_versionCheck_value">Already the Latest Version</string>
    <string name="about_version_new">NEW</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appInfo">App Info</string>
    <string name="appInfo_company_url">www.microtechmd.com</string>
    <string name="appInfo_instructions">Consult the Electronic Instructions for Use at %1$s</string>
    <string name="appInfo_instructions_url">microtechmd.com</string>
    <string name="appInfo_model">Software Model:</string>
    <string name="appInfo_name">Software Name：</string>
    <string name="appInfo_name_value">Continuous Glucose Monitoring App</string>
    <string name="appInfo_releaseDate">Release Date:</string>
    <string name="appInfo_releaseVersion">Software Release Version:</string>
    <string name="appInfo_usage">Follow instructions for use</string>
    <string name="appInfo_version">Software Complete Version:</string>
    <string name="app_crash">Program encountered an exception</string>
    <string name="app_download">%1$s 正在下载…</string>
    <string name="app_downloading">Downloading %1$s…</string>
    <string name="app_goSetting">Go to settings</string>
    <string name="app_name">Vixxa 1</string>
    <string name="app_slogan">Always guarding day and night, Always calm in all situations.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bg_description">%1$.1f</string>
    <string name="ble_delete">Force Delete</string>
    <string name="ble_delete_tip">In case of device loss or damage, perform this operation. After force deletion, the device cannot be paired with other accounts.</string>
    <string name="ble_history">Historical Devices</string>
    <string name="ble_history_sn">SN：%1$s</string>
    <string name="ble_history_time">Pairing Time: %1$s</string>
    <string name="ble_pair">Pairing</string>
    <string name="ble_pairList">Pairing</string>
    <string name="ble_pairList_my">My Devices</string>
    <string name="ble_pairList_myHint">Please select a device</string>
    <string name="ble_pairList_my_history">Click to view more %1$s</string>
    <string name="ble_pairList_nearby">Nearby Devices</string>
    <string name="ble_pairList_nearby_empty">No devices available</string>
    <string name="ble_pairList_nearby_hideMore">Collapse More</string>
    <string name="ble_pairList_nearby_showMore">More Devices</string>
    <string name="ble_pairList_snExample_or">or</string>
    <string name="ble_pairList_snExample_title">Where‘s the seral number?</string>
    <string name="ble_pairList_snInput">Currently, there are many available devices. To avoid connection errors, please check your own wearable device and manually enter the SN for confirmation or %1$s.</string>
    <string name="ble_pairList_snInput_error">The device SN number is inconsistent. Please select again.</string>
    <string name="ble_pairList_snInput_repick">Select Again</string>
    <string name="ble_pairList_snInput_scan">Scan QR Code</string>
    <string name="ble_pair_tip1">After successful pairing, you can continuously receive device data.</string>
    <string name="ble_pair_tip2">Please click Pair to complete the device pairing process.</string>
    <string name="ble_state_connect_failure">Connection Failed</string>
    <string name="ble_state_connecting">Connecting</string>
    <string name="ble_state_connectingWhenDisconnect">Bluetooth disconnected (%1$s), automatic connecting</string>
    <string name="ble_state_device_expire">产品已过期，请摘除设备</string>
    <string name="ble_state_disable">Please confirm if the sensor is paired with other devices.</string>
    <string name="ble_state_enableNotify">Please review the top status bar and agree to pairing</string>
    <string name="ble_state_ignoreFirst">Please go to [System Settings] - [Bluetooth] - [Exclamation mark on the right of %1$s] - [Ignore this device]</string>
    <string name="ble_state_notConfirmedOrCancel">%1$s pairing timeout not confirmed or click to cancel pairing</string>
    <string name="ble_state_otherParied">%1$s has been paired with another phone, and the current phone cannot complete pairing</string>
    <string name="ble_state_paired">Paired</string>
    <string name="ble_state_sensor_batteryLow">Sensor Battery Low</string>
    <string name="ble_state_sensor_error">Sensor abnormal, please wait for recovery</string>
    <string name="ble_state_sensor_error_critical">Sensor Device Malfunction</string>
    <string name="ble_state_sensor_expired">Sensor Expired</string>
    <string name="ble_state_sensor_expired_tip">当前传感器已过期请植入新传感器并完成“配对”</string>
    <string name="ble_state_sensor_invalid">Sensor is stabilizing, please wait for recovery</string>
    <string name="ble_state_sensor_newAuto">Automatically Confirm New Sensor</string>
    <string name="ble_state_sensor_warming">Sensor Preheating</string>
    <string name="ble_state_sensor_willFinish">Preheating is about to be completed</string>
    <string name="ble_state_unpaired">Not Paired</string>
    <string name="ble_unpair">Unpair</string>
    <string name="ble_unpair_tip">After normal unpairing, the device can be paired with other accounts.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cgm_error_max">High</string>
    <string name="cgm_error_min">Low</string>
    <string name="cgm_trend_fall">Falling</string>
    <string name="cgm_trend_fallQuick">Quick falling</string>
    <string name="cgm_trend_fallQuick_1">Notification Glucose Level Drops Fast</string>
    <string name="cgm_trend_fallSlow">Slowly falling</string>
    <string name="cgm_trend_rise">Rising</string>
    <string name="cgm_trend_riseQuick">Quick rising</string>
    <string name="cgm_trend_riseQuick_1">Notification Glucose Level Rising Fast</string>
    <string name="cgm_trend_riseSlow">Slowly rising</string>
    <string name="cgm_trend_stable">Steady</string>
    <string name="cgm_unit">BG Unit</string>
    <string name="cgm_unit_mg">mg/dL</string>
    <string name="cgm_unit_mmol">mmol/L</string>
    <string name="cgm_warning_high">High blood sugar alert</string>
    <string name="cgm_warning_low">Low blood sugar alert</string>
    <string name="cgm_warning_urgentLow">Low blood sugar urgent alert</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="com_action_sure">Confirm</string>
    <string name="fri">Fri</string>
    <string name="mon">Mon</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="tue">Tue</string>
    <string name="user_getCode">Verification code</string>
    <string name="user_phone">Phone number</string>
    <string name="user_pwd">Password</string>
    <string name="user_repwd">Confirm password</string>
    <string name="user_security">Account Security</string>
    <string name="user_sign_getCode">Send code</string>
    <string name="user_sign_logoff">Cancel account</string>
    <string name="user_sign_logout">Log out</string>
    <string name="user_sign_resetPwd">Reset password</string>
    <string name="user_warning">Reminder settings</string>
    <string name="user_warning_fallQuick_switch">Rapid blood sugar drop alert</string>
    <string name="user_warning_frequence_title">Reminder frequency</string>
    <string name="user_warning_high_switch">High blood sugar alert</string>
    <string name="user_warning_high_value">Threshold of high blood sugar alert</string>
    <string name="user_warning_low_switch">Low blood sugar alert</string>
    <string name="user_warning_low_value">Threshold of low blood sugar alert</string>
    <string name="user_warning_mode_title">Reminder method</string>
    <string name="user_warning_normal_content">Reminder content</string>
    <string name="user_warning_normal_mode">Reminder mode</string>
    <string name="user_warning_riseQuick_switch">Rapid blood sugar rise alert</string>
    <string name="user_warning_section_normal">Regular reminders</string>
    <string name="user_warning_section_system">System reminders</string>
    <string name="user_warning_section_urgent">Emergency reminders</string>
    <string name="user_warning_signalLost_switch">Signal lost</string>
    <string name="user_warning_urgentLow_switch">Urgent low blood sugar alert</string>
    <string name="user_warning_urgentLow_value">Threshold of urgent high blood sugar alert</string>
    <string name="wed">Wed</string>
</resources>