<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:id="@+id/ll_week" android:background="#ffffff" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="40dp" android:minHeight="40dp">
    <com.microtech.aidexx.WeekTextView android:textSize="12sp" android:textColor="#333333" android:gravity="center" android:id="@+id/week_sun" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/sun" android:layout_weight="1"/>
    <com.microtech.aidexx.WeekTextView android:textSize="12sp" android:textColor="#333333" android:gravity="center" android:id="@+id/week_mon" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/mon" android:layout_weight="1"/>
    <com.microtech.aidexx.WeekTextView android:textSize="12sp" android:textColor="#333333" android:gravity="center" android:id="@+id/week_tue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/tue" android:layout_weight="1"/>
    <com.microtech.aidexx.WeekTextView android:textSize="12sp" android:gravity="center" android:id="@+id/week_wed" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/wed" android:layout_weight="1"/>
    <com.microtech.aidexx.WeekTextView android:textSize="12sp" android:textColor="#333333" android:gravity="center" android:id="@+id/week_thu" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/thu" android:layout_weight="1"/>
    <com.microtech.aidexx.WeekTextView android:textSize="12sp" android:textColor="#333333" android:gravity="center" android:id="@+id/week_fri" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/fri" android:layout_weight="1"/>
    <com.microtech.aidexx.WeekTextView android:textSize="12sp" android:textColor="#333333" android:gravity="center" android:id="@+id/week_sat" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/sat" android:layout_weight="1"/>
</merge>
