<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.microtech.aidexx.views.ActionBarWidget android:id="@+id/action_bar" android:layout_width="match_parent" android:layout_height="wrap_content" app:leftIcon="@drawable/ic_back" app:titleText="@string/about"/>
    <LinearLayout android:orientation="vertical" android:background="?attr/bgSetting" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" style="@style/baseMargin">
        <Space android:layout_width="match_parent" android:layout_height="6dp"/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center" android:id="@+id/launcher" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp"/>
            <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="35dp" app:has_next="false" app:title="@string/about_name"/>
            <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_type" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:has_next="false" app:title="@string/about_model"/>
            <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_openVersion" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:has_next="false" app:title="@string/about_releaseVersion"/>
            <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_softVersion" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:has_next="false" app:title="@string/about_version"/>
            <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_checkVersion" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:has_next="true" app:title="@string/about_versionCheck"/>
            <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_service" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:has_next="true" app:title="@string/about_servicePolicy"/>
            <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_protocal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:has_line="false" app:has_next="true" app:title="@string/about_privatePolicy"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="6dp"/>
    </LinearLayout>
</LinearLayout>
