<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.microtech.aidexx.views.ActionBarWidget android:id="@+id/action_bar" android:layout_width="match_parent" android:layout_height="wrap_content" app:leftIcon="@drawable/ic_back" app:titleText="@string/user_sign_resetPwd"/>
    <LinearLayout android:orientation="vertical" android:background="?attr/bgSetting" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" style="@style/baseMargin">
        <LinearLayout android:orientation="vertical" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText android:id="@+id/et_username" android:background="?attr/bgSetting" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:hint="@string/user_phone" android:drawablePadding="10dp" android:drawableStart="@drawable/ic_fun_4" style="@style/MyEditText"/>
            <include layout="@layout/layout_line"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText android:id="@+id/et_code" android:background="?attr/bgSetting" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="0dp" android:layout_height="wrap_content" android:hint="@string/user_getCode" android:singleLine="true" android:drawablePadding="10dp" android:layout_weight="2" android:inputType="phone" android:drawableStart="@drawable/ic_icon_register_code" style="@style/MyEditText"/>
                <TextView android:id="@+id/btn_get_code" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/user_sign_getCode" android:layout_weight="1" app:emojiCompatEnabled="false" style="@style/btnLogin"/>
            </LinearLayout>
            <include layout="@layout/layout_line"/>
            <androidx.appcompat.widget.AppCompatEditText android:id="@+id/et_pwd" android:background="?attr/bgSetting" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/user_pwd" android:drawablePadding="10dp" android:inputType="textPassword" android:drawableStart="@drawable/ic_fun_6" style="@style/MyEditText"/>
            <include layout="@layout/layout_line"/>
            <androidx.appcompat.widget.AppCompatEditText android:id="@+id/et_pwd_confirm" android:background="?attr/bgSetting" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/user_repwd" android:drawablePadding="10dp" android:inputType="textPassword" android:drawableStart="@drawable/ic_fun_6" style="@style/MyEditText"/>
        </LinearLayout>
    </LinearLayout>
    <com.microtech.aidexx.views.button.StateButton android:id="@+id/button_regist" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:text="@string/com_action_sure" style="@style/StateButtonRaised"/>
</LinearLayout>
