<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.microtech.aidexx.views.ActionBarWidget android:id="@+id/action_bar_other_setting" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="0" app:leftIcon="@drawable/ic_back" app:titleText="@string/user_security"/>
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_rounded_setting" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintTop_toBottomOf="@+id/action_bar_other_setting">
        <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_logout" android:layout_width="match_parent" android:layout_height="wrap_content" app:has_line="true" app:has_next="true" app:title="@string/user_sign_logout"/>
        <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_reset_pwd" android:layout_width="match_parent" android:layout_height="wrap_content" app:has_line="true" app:has_next="true" app:title="@string/user_sign_resetPwd"/>
        <com.microtech.aidexx.views.SettingItemWidget android:id="@+id/setting_cancel_account" android:layout_width="match_parent" android:layout_height="wrap_content" app:has_line="false" app:has_next="true" app:title="@string/user_sign_logoff"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
