<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.microtech.aidexx.views.ActionBarWidget android:id="@+id/actionbar_trans_operation" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="0" app:leftIcon="@drawable/ic_back"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_pair" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintTop_toBottomOf="@+id/actionbar_trans_operation">
        <TextView android:textSize="16sp" android:textColor="@color/green_65" android:id="@+id/tv_pair" android:background="@drawable/shape_rounded_setting" android:paddingTop="14dp" android:paddingBottom="14dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ble_pairList" android:paddingStart="10dp" android:paddingEnd="10dp" app:drawableEndCompat="@drawable/ic_arrow_right" app:emojiCompatEnabled="false"/>
        <TextView android:textColor="?attr/colorHint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/ble_pair_tip1" android:paddingStart="10dp" android:paddingEnd="10dp" app:emojiCompatEnabled="false"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_unpair" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintTop_toBottomOf="@+id/ll_pair">
        <TextView android:textSize="16sp" android:textColor="@color/green_65" android:id="@+id/tv_unpair" android:background="@drawable/shape_rounded_setting" android:paddingTop="14dp" android:paddingBottom="14dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ble_unpair" android:paddingStart="10dp" android:paddingEnd="10dp" app:drawableEndCompat="@drawable/ic_arrow_right" app:emojiCompatEnabled="false"/>
        <TextView android:textColor="?attr/colorHint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/ble_unpair_tip" android:paddingStart="10dp" android:paddingEnd="10dp" app:emojiCompatEnabled="false"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_force_delete" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintTop_toBottomOf="@+id/ll_unpair">
        <TextView android:textSize="16sp" android:textColor="@color/red" android:id="@+id/tv_force_delete" android:background="@drawable/shape_rounded_setting" android:paddingTop="14dp" android:paddingBottom="14dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ble_delete" android:paddingStart="10dp" android:paddingEnd="10dp" app:drawableEndCompat="@drawable/ic_arrow_right" app:emojiCompatEnabled="false"/>
        <TextView android:textColor="?attr/colorHint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/ble_delete_tip" android:paddingStart="10dp" android:paddingEnd="10dp" app:emojiCompatEnabled="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
